Closed Bug 1030539 Opened 11 years ago Closed 11 years ago

Seeking hangs due to time truncation in Media Source Extensions

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: cajbir, Assigned: cajbir)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

MediaSourceDecoder truncates target time during seek due to integer division: AllContainsTime (aTime / USECS_PER_S) aTime is an int64_t.
Blocks: MSE
Attached patch FixSplinter Review
Assignee: nobody → cajbir.bugzilla
Status: NEW → ASSIGNED
Attachment #8446295 - Flags: review?(kinetik)
Comment on attachment 8446295 [details] [diff] [review] Fix Review of attachment 8446295 [details] [diff] [review]: ----------------------------------------------------------------- Remove the space between AllContainsTime and ( in each case please.
Attachment #8446295 - Flags: review?(kinetik) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: