Bug 1030539 - Seeking hangs due to time truncation in Media Source Extensions - r=kinetik

--HG--
extra : rebase_source : 169eb8b240894ec82606b0a15d74866ca5b52118